# GAMES101_Graphics

./: .gitignore  README.md
Project_three/: CMakeLists.txt  main.cpp
Project_three/include/: rasterizer.hpp
Project_three/src/: rasterizer.cpp
project_one/: Triangle.cpp  Triangle.hpp  description.md  main.cpp  rasterizer.cpp
project_one/x64/Debug/: project_one.exe.recipe  project_one.ilk  project_one.vcxproj.FileListAbsolute.txt  vc143.idb
project_one/x64/Debug/project_one.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  project_one.lastbuildstate
project_two/: Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
